fix Get xml and json

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=GranDaoBiblioteca
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/biblioteca
+spring.datasource.username=root
+spring.datasource.password=
+spring.main.allow-bean-definition-overriding=true
+spring.mvc.converters.preferred-xml-mapper=jackson
+spring.mvc.converters.preferred-json-mapper=jackson
