Libro Sevice Controlador funciona con el posman

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=GranDaoBiblioteca
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/biblioteca
 spring.datasource.username=root
-spring.datasource.password=contraseña
+spring.datasource.password=
 spring.main.allow-bean-definition-overriding=true
 spring.mvc.converters.preferred-xml-mapper=jackson
 spring.mvc.converters.preferred-json-mapper=jackson
