--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.password=
 spring.main.allow-bean-definition-overriding=true
 spring.mvc.converters.preferred-xml-mapper=jackson
 spring.mvc.converters.preferred-json-mapper=jackson
+# URL de conexión a MongoDB (cambia la base de datos 'biblioteca' si es necesario)
+spring.data.mongodb.uri=mongodb://localhost:27017/biblioteca
+
+# Configuración opcional
+spring.data.mongodb.database=biblioteca
+spring.data.mongodb.username=tu_usuario    # Si tienes autenticación
+spring.data.mongodb.password=tu_contraseña # Si tienes autenticación
