--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,10 @@ spring.data.mongodb.uri=mongodb://localhost:27017/biblioteca
 
 # Configuración opcional
 spring.data.mongodb.database=biblioteca
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
 spring.data.mongodb.username=tu_usuario    # Si tienes autenticación
 spring.data.mongodb.password=tu_contraseña # Si tienes autenticación
+
+
+
